--- a/journal/201904.md
+++ b/journal/201904.md
@@ -2,7 +2,7 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-April saw the launch of Lightning Network on Decred's testnet! This is a great time to [check it out](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e), do some testing, and start building on Decred's LN. 
+April saw the launch of Lightning Network on Decred's testnet! This is a great time to [check it out](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e), do some testing, and start building on Decred's LN.
 
 LN will become available on mainnet when DCP0004 activates on May 9 (block 342,784), but it will take time to build up the network and work out the kinks. Use of Decred's LN should for now be considered experimental and not involve large sums of DCR. Testnet is where the LN action will happen for some time. It is also important for all nodes to **upgrade before May 9 to avoid being forked off the network!**
 
@@ -24,19 +24,19 @@ The successfully [voted in](https://voting.decred.org/) rule change [DCP0004](ht
 
 [Politeia](https://github.com/decred/politeia): An upgrade was [deployed](https://twitter.com/marco_peereboom/status/1120398754216062978) on the live proposals site which brings significant performance improvements, adds a diff viewer to the proposal version history viewer drop-down, and changes the default ordering of comments to show top scoring comments first. The Contractor Management System is ready for use and will be used by contractors to submit their invoices for April.
 
-[dcrlnd](https://github.com/decred/dcrlnd): Decred’s Lightning Network (LN) is live on testnet! After months of hard work and several changes across the whole software stack, Decred’s official port of the original [lnd daemon](https://github.com/lightningnetwork/lnd), [dcrlnd](https://github.com/decred/dcrlnd), has been [released](https://matheusd.com/post/announcing-dcrlnd/) and is ready for testnet usage. All unit and integration tests from the upstream Lightning Network project are passing, and an initial [integration](https://github.com/decred/decrediton/pull/2107) with Decrediton is close to completion.
+[dcrlnd](https://github.com/decred/dcrlnd): Decred's Lightning Network (LN) is live on testnet! After months of hard work and several changes across the whole software stack, Decred's official port of the original [lnd daemon](https://github.com/lightningnetwork/lnd), [dcrlnd](https://github.com/decred/dcrlnd), has been [released](https://matheusd.com/post/announcing-dcrlnd/) and is ready for testnet usage. All unit and integration tests from the upstream Lightning Network project are passing, and an initial [integration](https://github.com/decred/decrediton/pull/2107) with Decrediton is close to completion.
 
 A lnd faucet has been [styled](https://github.com/matheusd/lightning-faucet/pull/4) for Decred look and feel. Check out one of several testnet faucets [here](https://testnet-dcrln-01.davec.name/) for a peek.
 
 Work is underway to prepare LN for mainnet, and Lightning will be technically possible on mainnet after the `fixlnseqlock` agenda [activates](https://explorer.dcrdata.org/agendas) in block 342,784 around May 9. It will take time to build up the network and improve the user experience. Use of Decred's LN should for now be considered experimental and not involve large sums of DCR. Testnet is where the LN action will happen for some time.
 
-[dcrandroid](https://github.com/decred/dcrandroid): Minor bug fixes and language optimizations continue. Optional biometric authentication option is [in progress](https://github.com/decred/dcrandroid/pull/343) and will be released in the next version, adding an extra layer of security on top of entering the wallet passphrase. 
+[dcrandroid](https://github.com/decred/dcrandroid): Minor bug fixes and language optimizations continue. Optional biometric authentication option is [in progress](https://github.com/decred/dcrandroid/pull/343) and will be released in the next version, adding an extra layer of security on top of entering the wallet passphrase.
 
 [dcrios](https://github.com/raedahgroup/dcrios): dcrios beta saw continued testing by community members and refinements to the UI. Only a few outstanding bugs remain, and developers continue working through the formal process of getting the app approved by the Apple Store.
 
-[dcrdata](https://github.com/decred/dcrdata): v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the alpha site. 
+[dcrdata](https://github.com/decred/dcrdata): v4.1.0 was released and deployed on [explorer.dcrdata.org](https://explorer.dcrdata.org/). This version adds [live tracking](https://explorer.dcrdata.org/agendas) of on-chain votes for consensus rules changes, along with a number of performance and development improvements listed in the [release notes](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). Voting charts for [Politeia proposals](https://alpha.dcrdata.org/proposals) have been added and iterated on the alpha site.
 
-[docs](https://github.com/decred/dcrdocs):  New pages: [Premine](https://docs.decred.org/advanced/premine/) describes Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes, [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia’s role in decision-making. 
+[docs](https://github.com/decred/dcrdocs): New pages: [Premine](https://docs.decred.org/advanced/premine/) describes Decred's airdrop and launch (a common source of misconception), [Verifying Votes](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) describes how to verify ticket votes, [Hardware Wallets](https://docs.decred.org/wallets/hardware-wallets/) provides basic info on hardware wallets that support DCR. The [Introduction to Decred Governance](https://docs.decred.org/governance/overview/) page has been overhauled to better explain ticket voting and Politeia's role in decision-making.
 
 [dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): A new Twitter bot was started in late March. Mention [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) in a comment and the bot will store the thread in IPFS, use dcrtime to anchor the data on the Decred blockchain, and message the user who invoked it.
 
@@ -56,7 +56,7 @@ Congratulations to 5 contributors listed on [decred.org](https://decred.org/cont
 
 ## Governance
 
-The  [consensus vote](https://voting.decred.org/) to implement DCP0004 completed on Apr 11 with almost 100% approval and 54.5% of tickets actively participating by voting Yes. The new rules will activate on May 9, see note above about upgrading node software.
+The [consensus vote](https://voting.decred.org/) to implement DCP0004 completed on Apr 11 with almost 100% approval and 54.5% of tickets actively participating by voting Yes. The new rules will activate on May 9, see note above about upgrading node software.
 
 In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,460 DCR and spent 13,943 DCR. Using April's daily average DCR/USD rate of $24.22, this is $374K received and $338K spent. As these payments were for work completed in March, it is also informative to consider them in the context of the March average daily rate of $18.14 - in which case the USD received/spent figures are $280K/$253K. As of Apr 3, Treasury balance is 608,069 DCR (16 million USD at $26.20).
 
@@ -102,17 +102,17 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-April was a very busy month coordinating outreach, planning meetups and events, and getting setup on various platforms to begin executing the marketing plan. @anshawblack took admin reign of Decred DCR in Telegram, and has been facilitating excellent discussions by sharing quality Decred content. Here’s a brief update on progress of the [marketing plan](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) approved on Politeia.
+April was a very busy month coordinating outreach, planning meetups and events, and getting setup on various platforms to begin executing the marketing plan. @anshawblack took admin reign of Decred DCR in Telegram, and has been facilitating excellent discussions by sharing quality Decred content. Here's a brief update on progress of the [marketing plan](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) approved on Politeia.
 
-Decred Assembly: @Dustorf & @jy-p did a practice session, then came back two weeks later to tape the first episode of the DA revamp. It was decided rather than record a single show, record segments separately in order to share a greater number of more digestible videos. For April, we filed a Deep Dive with @jy-p on the DEX, a Decred Distributed edition with @elian talking about Mexico and Latin America, and Decred Debunks segment with @richardred shooting down Boaty McBoatface and the idea that stakeholders won’t make good decisions. Some administration work remains in order to post these videos on a weekly basis, which we hope to accomplish by the time this is published. The May edition has already been scheduled.
+Decred Assembly: @Dustorf & @jy-p did a practice session, then came back two weeks later to tape the first episode of the DA revamp. It was decided rather than record a single show, record segments separately in order to share a greater number of more digestible videos. For April, we filed a Deep Dive with @jy-p on the DEX, a Decred Distributed edition with @elian talking about Mexico and Latin America, and Decred Debunks segment with @richardred shooting down Boaty McBoatface and the idea that stakeholders won't make good decisions. Some administration work remains in order to post these videos on a weekly basis, which we hope to accomplish by the time this is published. The May edition has already been scheduled.
 
 Decred Newsletter: We have decided to use an open-source service, [phpList](https://www.phplist.org/), which has caused some delay. The construct has been set and tests have been sent successfully. Currently, the design team is building out a template to make it look pretty, and they are working to incorporate a signup link into decred.org. Once that is done, we will share that to get people signed up and we expect to send the first emails in May.
 
-Website Updates: The architecture is set and a first draft of the copy is written for most of the additional subpages. Additionally, a second version of copy has been written for the new introductory video, which will be broken into three parts: Secure. Adaptable. Self-Funding. 
+Website Updates: The architecture is set and a first draft of the copy is written for most of the additional subpages. Additionally, a second version of copy has been written for the new introductory video, which will be broken into three parts: Secure. Adaptable. Self-Funding.
 
 Decred in Depth Podcast: @anshawblack is traveling to New York for Blockchain Week beginning on May 11 and plans to record episodes with @jy-p, @jz, Murad Mahmudov, Joel Monegro, Permabull Niño, and Trey Ditto. He will then edit and trickle out the episodes over the coming weeks and months.
 
-Community Organizers: The volume of Decred meetups and the number of events attended below highlights the success we’ve had mobilizing communities across the world. A meetup guide and tools to execute meetups will be part of the website updates. Until then, assets can be found in the [Design Repository](https://github.com/decred/dcrdesign/releases) on GitHub. A reminder that if you would like a meetup in your neighborhood, start one! Decred community members take the lead on everything, there is no one dictating what happens where, simply community enablement. 
+Community Organizers: The volume of Decred meetups and the number of events attended below highlights the success we've had mobilizing communities across the world. A meetup guide and tools to execute meetups will be part of the website updates. Until then, assets can be found in the [Design Repository](https://github.com/decred/dcrdesign/releases) on GitHub. A reminder that if you would like a meetup in your neighborhood, start one! Decred community members take the lead on everything, there is no one dictating what happens where, simply community enablement.
 
 Decred was [V Label Verifiied](https://medium.com/binanceexchange/binance-infos-v-label-verification-f3506f64b292) on Binance. To become verified, an official member of the project (someone with a Decred email and KYC'd identity on Binance - @s\_ben) reviewed and verified the information on Decred's [profile page](https://info.binance.com/en/currencies/decred). This allowed us an opportunity to update the project description to be more accurate and incorporate new marketing messaging, as well as correct some erroneous information about Decred's launch (a common task).
 
@@ -122,35 +122,35 @@ Attended:
 
 * Apr 4-5 - [BitcoinDay Argentina](https://www.eventbrite.com.ar/e/bitcoinday-cor-ciudad-de-cordoba-tickets-57550681638) - Cordoba, Argentina. @elian presented a keynote "Decred in 20 minutes" introduction to the project, and also a "How to become a Decred contractor" talk as part of the workshop. See report [here](https://decredcommunity.org/events/bitcoinday-argentina). ([photos](https://twitter.com/elianhuesca/status/1114571807649148928))
 * Apr 8 - [Decred: Tools, Use and Contribution](https://www.meetup.com/decredpdx/events/260098916/) - Portland, USA. 17 attendees heard @oregonisaac give an in depth talk on Decred tools, use and contribution, and development updates from @raedah, @oregonisaac and @s\_ben. The community is growing in numbers and engagement. Everyone is excited and looking forward to the next meetup. ([photos](https://twitter.com/DecredPdx/status/1115734111174291456))
-* Apr 18 - [Coordinating Open Source: Today and Tomorrow](https://www.meetup.com/San-Francisco-Decred-Meetup/events/260046546/) - Coinbase HQ, San Francisco, USA. The event was held at Coinbase HQ in partnership with Coinbase Custody. @lukebp spoke about Decred’s unique governance and self-funding model. There was then a moderated discussion about tradeoffs of different funding models, and Luke answered questions for over an hour. Approximately 70 people attended. (photos: [1](https://twitter.com/liz_bagot/status/1119098216165695495) [2](https://twitter.com/LarissaBundziak/status/1119340380187529216))
+* Apr 18 - [Coordinating Open Source: Today and Tomorrow](https://www.meetup.com/San-Francisco-Decred-Meetup/events/260046546/) - Coinbase HQ, San Francisco, USA. The event was held at Coinbase HQ in partnership with Coinbase Custody. @lukebp spoke about Decred's unique governance and self-funding model. There was then a moderated discussion about tradeoffs of different funding models, and Luke answered questions for over an hour. Approximately 70 people attended. (photos: [1](https://twitter.com/liz_bagot/status/1119098216165695495) [2](https://twitter.com/LarissaBundziak/status/1119340380187529216))
 * Apr 18 - [Binance LATAM AMA](https://twitter.com/binance/status/1118883131799400449) - online. @elian participated in a Spanish language AMA with members of the Binance Latam community, receiving and answering question from users on Facebook and Telegram.
 * Apr 22-26 - [Talent Land](https://www.talent-land.mx/) - Guadalajara, Mexico. @elian provided a [summary](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155690701035573YcsMH:matrix.org) of the event and Decred's participation. The event was attended by over 60,000 people, and Decred was the only major cryptocurrency represented in "Blockchain Land". A talk titled "Decred: The money of the future" was attended by around 35 people, and hundreds more stopped by to talk to the Decred representatives at the booth. Attendees responded well to the idea of "be your own bank", and also the concept of Decred as self-funding open source software production. (photos: [1](https://twitter.com/elianhuesca/status/1121243105276125184) [2](https://twitter.com/victorarubin/status/1121169425011494913))
 * Apr 24-25 - [Blockchain Summit](http://blockchainsummit.ma/) - Rabat, Morocco. @arij (@butterfly in Slack) presented Decred and exhibited. Mainly students and professors from Morocco and France attended. (photos: [1](https://twitter.com/DecredArabia/status/1121011670808240128) [2](https://twitter.com/DecredArabia/status/1121160292333965313) [3](https://twitter.com/DecredArabia/status/1121695331253673984))
-* Apr 25 - [Decred Chicago meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/) - Chicago, USA. Jack Miller hosted the inaugural meetup in Chicago. 
-* Apr 29 - [AMA for Chinese Community](https://www.chainnode.com/ama/317174) - online. @Haon and @guang  conducted an AMA with members of the Chinese Decred community, receiving and answering over 30 questions.
+* Apr 25 - [Decred Chicago meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/260653330/) - Chicago, USA. Jack Miller hosted the inaugural meetup in Chicago.
+* Apr 29 - [AMA for Chinese Community](https://www.chainnode.com/ama/317174) - online. @Haon and @guang conducted an AMA with members of the Chinese Decred community, receiving and answering over 30 questions.
 * Apr 30 - [Crypto Governance - It is a matter of survival](https://www.meetup.com/BlockchainMelbourne/events/260266298/) - Melbourne, Australia. Decred facilitated this panel discussion about crypto governance. ([photos](https://twitter.com/DecredAustralia/status/1123396115003392000))
 
 Upcoming:
 
-* May 10-17 - NYC Blockchain Week - New York, USA. A team of 7 Decred community members will attend events at various locations. Ditto has been working to make [AtomicSwap](https://twitter.com/TheBlock__/status/1123339626616360962) (the event formerly known as BreakerCon) as successful as possible on May 15. You may have seen the [news](https://twitter.com/BreakerMag/status/1123259686516592642) that Breaker Mag is shutting down, so Ditto is now co-hosting this event with the top crypto outlet, The Block. During Blockchain Week NYC, Decred will take the main stage as @jy-p speaks on a panel called “The Idealist’s Dilemma,” where he’ll debate what it means to be decentralized with other project leads: Ryan Taylor of Dash, Alexander Zaidelson of Beam, and Tal Kol of Orbs. 
+* May 10-17 - NYC Blockchain Week - New York, USA. A team of 7 Decred community members will attend events at various locations. Ditto has been working to make [AtomicSwap](https://twitter.com/TheBlock__/status/1123339626616360962) (the event formerly known as BreakerCon) as successful as possible on May 15. You may have seen the [news](https://twitter.com/BreakerMag/status/1123259686516592642) that Breaker Mag is shutting down, so Ditto is now co-hosting this event with the top crypto outlet, The Block. During Blockchain Week NYC, Decred will take the main stage as @jy-p speaks on a panel called "The Idealist's Dilemma", where he'll debate what it means to be decentralized with other project leads: Ryan Taylor of Dash, Alexander Zaidelson of Beam, and Tal Kol of Orbs.
 * May 18 - [Criptolatinfest](https://criptolatinfest.com/) - Bogota, Colombia. Decred will have a speaking slot.
 * May 20-21 - [La Conexion](https://www.la-conexion.com/) - Medellin, Colombia. @elian will give a keynote on governance.
 * May 23-24 - [BitcoinDay Uy](https://bitcoinday.tv/) - Montevideo, Uruguay. Speaking slot to present Decred at BitcoinDay Uruguay. This event is organized by the same group as BitcoinDay Argentina, and the invitation to present Decred comes from the project's strong showing in Argentina.
 * Jun 5 - Decred Meetup - Berlin, Germany. @jholdstock will present an overview of Decred and Philipp Banhardt of BlueYard will discuss their investment thesis. Hosted by BlueYard Capital.
-* Jun 12 - [Decred: A Decentralized Autonomous Entity](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Arlington, VA, USA. Organized by Akin Sawyerr. 
+* Jun 12 - [Decred: A Decentralized Autonomous Entity](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Arlington, VA, USA. Organized by Akin Sawyerr.
 * Jun 19-23 - [Campus Party Brasil](https://brasil.campus-party.org/campus-party-brasilia/) - Brasilia, Brazil. Decred [will](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15568861633013AEoGy:decred.org) be well represented, as it always is at Campus Party.
 * Early June, date TBD - Decred meetup NYC, being launched by Cole Kennelly of Staked. Planning the first three events through the summer, then will involve Decred in events that incorporate the wider ecosystem.
 * The SF Meetup group will share details soon about their next event, likely to be held in early June. The working topic is Lightning Network.
 
 ## Media
 
-Ditto overview: 
+Ditto overview:
 
-* @jz spoke with [The Block](https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/) about Decred’s listing experience on Binance.
-* Ticket-voter [messaging](https://pastebin.com/7SvuVyyY) document was created as a tool for educating people on how Decred’s voting system works. Input from the community was incorporated, with second version currently under review. 
+* @jz spoke with [The Block](https://www.theblockcrypto.com/2019/04/17/binance-wants-crypto-projects-to-migrate-to-its-chain-from-ethereum-and-the-firms-massive-trading-business-could-help/) about Decred's listing experience on Binance.
+* Ticket-voter [messaging](https://pastebin.com/7SvuVyyY) document was created as a tool for educating people on how Decred's voting system works. Input from the community was incorporated, with second version currently under review.
 * An [article](https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/) on the proposal to decentralize the Treasury appeared on InvestInBlockchain.com.
 * @matheusd drafted a [blogpost](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e) on the Lightning Network Testnet on Medium and it was published on HackerNoon.
-* AMA with @jy-p [took place](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on r/cryptocurrency, which has more than 870K readers. @lukebp generated this opportunity when he presented at Coinbase in SF. 
+* AMA with @jy-p [took place](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on r/cryptocurrency, which has more than 870K readers. @lukebp generated this opportunity when he presented at Coinbase in SF.
 * Ditto and @Dustorf will have an AMA for the Decred community to ask anything about PR and marketing via Reddit, Matrix, and YouTube. Target date is May 17 at noon EST (UTC-5).
 
 Selected articles:
@@ -170,7 +170,7 @@ Translations:
 
 Videos:
 
-* @jy-p's Decred overview [keynote speech](https://www.youtube.com/watch?v=l2Vu0JX7Xbc) at OKCoin + Decred San Francisco [event](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) 
+* @jy-p's Decred overview [keynote speech](https://www.youtube.com/watch?v=l2Vu0JX7Xbc) at OKCoin + Decred San Francisco [event](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617).
 * @joshuam [presentation](https://www.youtube.com/watch?v=QeNfs7lUV38) at TABConf 2019, giving an introduction to the Decred cryptocurrency, community and economy/organization.
 
 Audio:
@@ -181,7 +181,7 @@ Audio:
 
 Community stats as of May 2:
 
-* Politeia users: 167 
+* Politeia users: 167
 * Twitter followers: 40,456 (+147)
 * Reddit subscribers: 9,425 (+20)
 * Matrix users: 312 (+28)
@@ -201,7 +201,7 @@ Comm systems news:
 * Fake account impersonating as "Decred" was detected running giveaways on Facebook. Stay vigilant.
 * @degeri joined as a new Reddit moderator to keep r/decred clean from everyday spam. Welcome!
 
-Selected Reddit discussions: 
+Selected Reddit discussions:
 
 * Does 48% of coins locked in staking result in lower [volatility](https://www.reddit.com/r/decred/comments/bh1erw/decred_has_48_of_coins_lockedup_in_staking/)?
 * Decred was [added](https://www.reddit.com/r/decred/comments/bgiqh0/bullish_bitwise_has_updated_their_top_20_mid_cap/) to Bitwise Top 20 Mid Cap Crypto Index
@@ -212,7 +212,7 @@ Selected Reddit discussions:
 * Perspective on scalability and [blockchain size](https://www.reddit.com/r/decred/comments/bi366i/blockchain_storage_over_time/) over time.
 * @jy-p did an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on /r/cryptocurrency on May 2 that received 69 total comments.
 
-Selected tweets: 
+Selected tweets:
 
 * @pascaltmn [tweeting](https://twitter.com/pascaltmn/status/1120006806397489159) about Decred as a Bitcoin hedge
 
@@ -226,7 +226,7 @@ Bitcoin broke the USD 5,000 barrier on Apr 3 and most other crypto assets reacte
 
 @richardred has collected and [shared](https://github.com/RichardRed0x/crypto-governance-research/tree/master/governance-proposals) comprehensive proposal voting datasets for Decred, Dash and Aragon, and [tweeted](https://twitter.com/RichardRed0x/status/1114552602237313024) some basic statistics like average voter participation for each project. At the time of writing (Apr 6), based on proposals that had finished voting, Decred had an average ticket participation of 76% for on chain votes and 31% for Politeia proposals; Dash had an average masternode participation of 19% in its Treasury proposals; Aragon had an average ANT token participation of 4.5% in voting on Aragon Governance Proposals.
 
-The second round of Aragon AGP voting concluded its 2 day voting window on Apr 27. 9 proposals were voted on, with a mean participation rate of 3.8% of circulating ANT tokens. 6 proposals were accepted, 3 rejected. 
+The second round of Aragon AGP voting concluded its 2 day voting window on Apr 27. 9 proposals were voted on, with a mean participation rate of 3.8% of circulating ANT tokens. 6 proposals were accepted, 3 rejected.
 
 3 of the Aragon's proposals concerned Polkadot in some way, after the leaders of Aragon One had stated that they are considering developing a second Aragon application on Polkadot. A proposal to buy some DOTs with the Aragon Association's ETH (with a view to maintaining a parachain and participating in Polkadot governance) was firmly rejected by ANT voters, with just 7% Yes votes. A proposal to affirm Aragon's commitment to Ethereum and stop Aragon One working on Polkadot related development was more narrowly defeated (with 31% Yes votes). This proposal would have caused significant friction between Aragon One and the ANT holder community had it passed, with Luis Cuende stating in an [interview](https://www.coindesk.com/aragon-vote-aims-to-restrict-ethereum-app-from-funding-polkadot-blockchain) that he would have submitted a counter-proposal in the following round of AGP voting. In the third Polkadot-related proposal, 72% of voting ANT approved the Aragon Association to participate in a "lockdrop" for tokens on the forthcoming Edgeware parachain - leaving considerable discretion for the AA to decide how many tokens to lock and how long to lock them for. Another interesting proposal saw the Aragon Association asking for authority to arrange security audits directly (rather than going through the AGP process to vote on these decisions), this was approved with 93% Yes votes, while a proposal for continued funding from the group that currently performs security audits was rejected with 35% Yes votes.
 
@@ -234,7 +234,7 @@ The Dash sporking upgrade process [completed](https://blog.dash.org/product-upda
 
 The EOS constitution has been replaced with a new [user agreement](https://github.com/eosnewyork/eosuseragreement/blob/master/README.md), proposed on chain by [EOS New York](https://medium.com/eos-new-york/the-eos-user-agreement-has-been-proposed-on-chain-61bf3760b604) and [approved](https://eosauthority.com/approval/view?scope=eosnewyorkio&name=eosuseragree&lnc=en) by the 21 Block Producers. This change had been put to EOS holders in a [referendum](https://eosauthority.com/polls_details?proposal=eosuseragree_20190207&lnc=en). The referendum has a long duration (3 months) and is not due to finish until May 8, there is strong support for the proposal (98% Yes) but voter participation is very low (1.7%). EOS referendums had a notional quorum requirement of 15%, but in light of the fact that none of the polls are even close to reaching that level of participation, it seems like the BPs have decided to bypass the formal referendum process and move forward with some of the proposed changes. The EOS BPs also [approved](https://twitter.com/zeroxeos/status/1118833569118466048) the deployment of REX (Resource Exchange), but it [failed](https://www.reddit.com/r/eos/comments/bekd4f/rex_is_here_status_approved_by_15_bp/) execution on chain and will have to be re-proposed.
 
-Aeternity is [planning](https://blog.aeternity.com/aeternity-first-on-chain-governance-vote-decentralization-2-0-5e0c8a01891a) to hold its first on-chain governance vote May 7-14. The proposal to be voted on is establishing a "Block Reward Initiative (BRI), through which ~0–20% of miner rewards will be allocated to development". The announcement post references Aeternity's ICO funds as being sufficient to fund development for years to come, and positions the BRI as a transition to a self-sustaining platform. BRI funds would be given to a charitable foundation registered in Liechtenstein, and administered by a technical council. AE token holders will vote for 0, 5, 10, 15 or 20% of the block rewards to go to this foundation - as long as more than 50% of AE votes for a share greater than 0%, the percentage will be set using a weighted average of the votes for options greater than 0%. This will leave some AE holders who don't want the block reward funding with a difficult choice of whether to vote for 0% and hope to be in the majority (and otherwise be ignored) or to vote for 5% to lower the weighted average in the case that the proposal is approved.
+Aeternity is [planning](https://blog.aeternity.com/aeternity-first-on-chain-governance-vote-decentralization-2-0-5e0c8a01891a) to hold its first on-chain governance vote May 7-14. The proposal to be voted on is establishing a "Block Reward Initiative (BRI), through which ~0-20% of miner rewards will be allocated to development". The announcement post references Aeternity's ICO funds as being sufficient to fund development for years to come, and positions the BRI as a transition to a self-sustaining platform. BRI funds would be given to a charitable foundation registered in Liechtenstein, and administered by a technical council. AE token holders will vote for 0, 5, 10, 15 or 20% of the block rewards to go to this foundation - as long as more than 50% of AE votes for a share greater than 0%, the percentage will be set using a weighted average of the votes for options greater than 0%. This will leave some AE holders who don't want the block reward funding with a difficult choice of whether to vote for 0% and hope to be in the majority (and otherwise be ignored) or to vote for 5% to lower the weighted average in the case that the proposal is approved.
 
 Ycash, a "friendly fork" of Zcash, was [announced](https://forum.zcashcommunity.com/t/announcing-ycash-the-first-friendly-fork-of-the-zcash-blockchain/33162). Ycash will build off a snapshot of the Zcash chain, and will diverge in two ways (replacing the current 20% Founders Reward with a perpetual 5% reward going to a newly created Ycash foundation, and switching the PoW mining algorithm to something more conducive to mining on commodity hardware) while aiming to incorporate future improvements from Zcash. Zooko Wilcox wrote a [blog post](https://z.cash/blog/future-friendly-fork/) about "A Future Friendly Fork" in 2017, and this appears to have inspired the positioning of Ycash as a friendly fork. Zooko has also commented on the Ycash post to say that he sees Ycash as a positive development for Zcash.
 
@@ -244,7 +244,7 @@ The Zcash Foundation [announced](https://www.zfnd.org/blog/kzen-multisig/) fundi
 
 Zcoin [announced](https://zcoin.io/further-disclosure-on-zerocoin-vulnerability/) a vulnerability with the Zerocoin protocol that allowed forged coins to be created ("not exceeding 1% of the circulating supply"). Details are to be released later, once other projects exposed to a flaw with the cryptography of Zerocoin (PIVX, Veil and Gravity Coin) have had a chance to mitigate the issue. The Zcoin team called for Zerocoin spends to be disabled on Apr 9 when they detected the issue, and in this post on Apr 26 confirmed that it will remain disabled for Zcoin as they are working on a replacement (Sigma) which is nearly ready.
 
-In [part 4](https://blog.0xproject.com/0x-roadmap-2019-part-4-proposal-for-stake-based-liquidity-incentive-52c16558df29) of the 0x Roadmap [ZEIP-31](https://github.com/0xProject/ZEIPs/issues/31) was proposed, which would add incentives for market makers to hold the ZRX token. This is in response to a lack of correlation between users of 0x and ZRX token holders. ZRX is designed to be used to govern the protocol, which is unlikely to work well in a scenario where the main users do not hold any ZRX. The proposal is at the start of a long process to develop and audit the new smart contracts then hold a tokenholder vote to approve/reject the integration of the changes. 
+In [part 4](https://blog.0xproject.com/0x-roadmap-2019-part-4-proposal-for-stake-based-liquidity-incentive-52c16558df29) of the 0x Roadmap [ZEIP-31](https://github.com/0xProject/ZEIPs/issues/31) was proposed, which would add incentives for market makers to hold the ZRX token. This is in response to a lack of correlation between users of 0x and ZRX token holders. ZRX is designed to be used to govern the protocol, which is unlikely to work well in a scenario where the main users do not hold any ZRX. The proposal is at the start of a long process to develop and audit the new smart contracts then hold a tokenholder vote to approve/reject the integration of the changes.
 
 Bitcoin (Cash) Satoshi's Vision (BSV) has been [delisted](https://www.coindesk.com/kraken-exchange-joins-binance-shapeshift-in-delisting-bitcoin-sv) by a number of exchanges as part of an ongoing feud between Craig S Wright and some members of the Bitcoin community. Ironic that the poor behavior of a very visible front man is causing so much trouble for BSV.
 
@@ -270,4 +270,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, Dustorf, elian, guang, Haon, issedjur, liz_bagot, lukebp, matheusd, richardred, s_ben, saender, sambiohazard.
+Credits (alphabetical order): bee, Dustorf, elian, guang, Haon, issedjur, liz\_bagot, lukebp, matheusd, richardred, s\_ben, saender, sambiohazard.
